Ingress-configmaps-secrets-12/03-ingress/path-based.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yatri-ingress
  labels:
    app: yatri-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: yatri.local
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: yatri-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yatri-frontend-service
            port:
              number: 80
